added user routes, user controllers, user validation, and tests for the routes
